# ml-on-actions

./: Dockerfile  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: add_new_samples.yaml  data_and_modelling.yaml  docker_build_and_publish.yaml  train_model.yaml
data/dataset/: test.csv  train.csv
data/new_dataset/: dummy_train.csv
src/: cli.py
src/data/: data.py
src/http_server/: main.py
src/mlonactions/data/: __init__.py  data.py
src/mlonactions/model/: __init__.py  model.py
src/mlonactions/pipelines/: __init__.py  add_new_samples.py  data_and_model_monitoring.py  data_and_model_monitoring_and_testing.py  train.py
src/model/: model.py
src/pipelines/: __init__.py  add_new_samples.py  train.py
