[tool.poetry]
name = "ml-on-actions"
version = "0.1.0"
description = "An OOTB ML platform orchestrated through Github Actions"
authors = ["Tanmay Garg <tanmay17061@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
pydantic = "^2.3.0"
pandas = "^2.1.0"
dvc = "^3.19.0"
dvc-s3 = "^2.23.0"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
